--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="Creme.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -84,3 +84,4 @@
 
 </body>
 </html>
+
